--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyCct9EeJILr5IO8-OXlIPwsLOB61vp7Kuo"></script>
+<script src="http://maps.google.com/maps/api/js?key=MY-KEY-HERE"></script>
 
 <script src="mapanimation.js"></script>
 
